# S3

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Readme.md  S3C++  cmake_install.cmake  insert  insert.cpp  insert_dbp  insert_leveldb  insert_program  main.cpp  massif.out.4523  massif.out.7140  myS3Demo.pem  number.py  output.csv  setup.py  valgrind_report.txt
1Bquery/: q1.rq  q10.rq  q12.rq  q14.rq  q15.rq  q16.rq  q18.rq  q21.rq  q3.rq  q4.rq
ArrowInputStream/: ArrowInputStream.cpp  ArrowInputStream.h
algorithm/: BloomFilter.h  merge.cpp  merge.h  order.h  test  test.cpp
fpdb-aws/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
fpdb-aws/src/: AWSClient.cpp
fpdb-util/: CMakeLists.txt  Makefile  cmake_install.cmake
fpdb-util/test/: TraitsTest.cpp
index/: 003656.ldb  003657.ldb  003658.ldb  003659.ldb  003660.ldb  003661.ldb  003662.ldb  003663.ldb  003664.ldb  003665.ldb  003666.ldb  003667.ldb  003668.ldb  003669.ldb  003670.ldb  003671.ldb  003672.ldb  003673.ldb  003674.ldb  003675.ldb  003676.ldb  003677.ldb  003678.ldb  003679.ldb  003680.ldb  003681.ldb  003682.ldb  003683.ldb  003684.ldb  003685.ldb  003686.ldb  003687.ldb  003688.ldb  003689.ldb  003690.ldb  003691.ldb  003692.ldb  003693.ldb  003694.ldb  003695.ldb  (+1085 more)
load/: load.cpp  load.h
pushdownDB/: readS3.cpp
queries/: F1.txt  F2.txt  F3.txt  F4.txt  F5.txt  F6.txt  F7.txt  I1.txt  I2.txt  I3.txt  I4.txt  I5.txt  I6.txt  I7.txt  L1.txt  L2.txt  L3.txt  L4.txt  L5.txt  L6.txt  S1.txt  S2.txt  S3.txt  S4.txt  S5.txt  S6.txt  S7.txt  c1.txt  c2.txt  c3.txt  d1.txt  d2.txt  d3.txt  d5.txt  d6.txt  d7.txt  q1.rq  q11.rq  q13.rq  q17.rq  (+14 more)
queries/new_query/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q15.txt  q16.txt  q17.txt  q18.txt  q19.txt  q2.txt  q20.txt  q21.txt  q22.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt
queries/wikidata/: q1.rq  q10.rq  q11.rq  q12.rq  q13.rq  q14.rq  q15.rq  q16.rq  q17.rq  q18.rq  q19.rq  q2.rq  q20.rq  q21.rq  q3.rq  q4.rq  q5.rq  q6.rq  q7.rq  q8.rq  q9.rq  test.rq
queryMethod/: query.cpp  query.h
res/: 0  1  4  5  6  7  S3.csv  c1.csv  c2.csv
resources/config/: aws.conf
sdk_build/: CMakeCache.txt  Makefile  aws-sdk-cpp-config.cmake  cmake_install.cmake
sdk_build/AWSSDK/: AWSSDKConfigVersion.cmake
sdk_build/crt/aws-crt-cpp/: Makefile  cmake_install.cmake
sdk_build/lib/: libaws-c-event-stream.so.1.0.0
sdk_build/src/aws-cpp-sdk-access-management/: Makefile  aws-cpp-sdk-access-management.pc  cmake_install.cmake
sdk_build/src/aws-cpp-sdk-core/: Makefile  aws-cpp-sdk-core.pc  cmake_install.cmake  ub_core.cpp
sdk_build/src/aws-cpp-sdk-identity-management/: Makefile  aws-cpp-sdk-identity-management.pc  cmake_install.cmake
sdk_build/src/aws-cpp-sdk-queues/: Makefile  aws-cpp-sdk-queues-config-version.cmake  aws-cpp-sdk-queues.pc  cmake_install.cmake
sdk_build/src/aws-cpp-sdk-s3-encryption/: Makefile  aws-cpp-sdk-s3-encryption.pc  cmake_install.cmake
sdk_build/src/aws-cpp-sdk-text-to-speech/: Makefile  aws-cpp-sdk-text-to-speech.pc  cmake_install.cmake
sdk_build/src/aws-cpp-sdk-transfer/: Makefile  aws-cpp-sdk-transfer.pc  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-cloudfront-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-cognitoidentity-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-core-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-dynamodb-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-ec2-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-elasticfilesystem-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-eventbridge-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-identity-management-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-kinesis-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-lambda-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-logs-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-mediastore-data-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-monitoring-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-polly-sample/: Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-rds-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-redshift-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-s3-crt-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-s3-encryption-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-s3-encryption-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-s3-integration-tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sdk_build/tests/aws-cpp-sdk-s3-unit-tests/: CTestTestfile.cmake  Makefile  (+1 more)
sort/: sort.cpp  sort.h
translate/: CSVFormat.cpp  CSVFormat.h  ThreadPool.h  translate.cpp  translate.h
your_db_path/: LOG
(+58 files in other folders)
